Fix last dropdown appearing off-screen

--- a/app/scss/components/_dropdown.scss
+++ b/app/scss/components/_dropdown.scss
@@ -7,6 +7,10 @@
   position: absolute;
   top: 100%;
   z-index: 1;
+
+  .device:last-child:not(:only-child) & {
+    right: 0;
+  }
 }
 
 .dropdown--device {
